Galeria proyectos- agregar proyectos

--- a/src/main/resources/templates/proyecto/listado.html
+++ b/src/main/resources/templates/proyecto/listado.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
+
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head th:replace="layout/plantilla :: head">
-        
         <title>TODO supply a title</title>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"></header>
-       
         
-         <section th:replace="servicio/fragmentos :: hero"></section>
-         <div th:replace="servicio/fragmentos :: inicioContent"></div>
-
+        
+        <section th:replace="proyecto/fragmentos :: botonesAgregar"></section>
+        <section th:replace="proyecto/fragmentos :: agregarProyecto"></section>
+        <section th:replace="proyecto/fragmentos :: listadoProyectos"></section>
+        
         <footer th:replace="layout/plantilla :: footer"></footer>
     </body>
 </html>
