--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="head">
@@ -18,7 +17,7 @@
     <header th:fragment="header" class="header">
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container">
-                <a th:href="@{ /servicio/inicio }" class="navbar-brand">
+                <a th:href="@{ /inicio/servicio }" class="navbar-brand">
                     <img th:src="@{/img/CH -logo-white.png}" width="180" height="120px" class="d-inline-block align-middle mr-2" alt="CH Constructora Logo"/>
 
                 </a>
@@ -27,10 +26,12 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <ul class="navbar-nav">
-                         <li class="nav-item px-2"><a class="nav-link" th:href="@{/servicio/inicio}">[[#{plantilla.inicio}]]</a></li>
+                         <li class="nav-item px-2"><a class="nav-link" th:href="@{/inicio/servicio}">[[#{plantilla.inicio}]]</a></li>
                       <li class="nav-item px-2"><a class="nav-link" th:href="@{/acerca/about}">[[#{plantilla.acerca}]]</a></li>
-                      <li class="nav-item px-2"><a class="nav-link" th:href="@{/}">[[#{plantilla.proyectos}]]</a></li>
+                      <li class="nav-item px-2"><a class="nav-link" th:href="@{/proyecto/listado}">[[#{plantilla.proyectos}]]</a></li>
+                       <li class="nav-item px-2"><a class="nav-link" th:href="@{/proyecto/proyectos}">[[#{plantilla.galeria}]]</a></li>
                        <li class="nav-item px-2"><a class="nav-link" th:href="@{/}">[[#{plantilla.contacto}]]</a></li>
+                       
                         
                        
                     </ul>
@@ -39,7 +40,7 @@
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">[[#{plantilla.idioma}]]</a>
                             <ul class="dropdown-menu dropdown-menu-dark">
                                 <li><a class="dropdown-item" th:href="@{/(lang=es)}">ES</a></li>
-                                <li><a class="dropdown-item" th:href="@{/servicio/inicio/(lang=en)}">EN</a></li>
+                                <li><a class="dropdown-item" th:href="@{/(lang=en)}">EN</a></li>
                             </ul>
                         </li>
                     </ul>
