--- a/src/main/resources/templates/acerca/about.html
+++ b/src/main/resources/templates/acerca/about.html
@@ -1,11 +1,106 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="layout/plantilla :: head">
-        <title>About Us</title>
-    </head>
-    <body>
-        <header th:replace="layout/plantilla :: header"></header>
-        <main th:replace="acerca/fragmentos :: about-content"></main>
-        <footer th:replace="layout/plantilla :: footer"></footer>
-    </body>
+<head th:replace="layout/plantilla :: head">
+    <title>About Us</title>
+</head>
+<body>
+    <header th:replace="layout/plantilla :: header"></header>
+    
+    <main>
+        <section>
+            <div class="container text-center">
+                <img th:src="@{/img/CH -logo-black.png}" class="img-fluid" width="100%" height="100px" alt="Company Logo">
+            </div>
+        
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 creemos">
+                        <h2 class="h2">Creemos en <br>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-fold-down" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#c5aa6a" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M12 11v8l3 -3m-6 0l3 3" />
+                                <line x1="9" y1="7" x2="10" y2="7" />
+                                <line x1="14" y1="7" x2="15" y2="7" />
+                                <line x1="19" y1="7" x2="20" y2="7" />
+                                <line x1="4" y1="7" x2="5" y2="7" />
+                            </svg>
+                        </h2>
+                        <p>INTEGRIDAD, Nos distinguimos por trabajar correctamente. Actuamos con honestidad, transparencia, respeto y amabilidad.</p>
+                    </div>
+                     <div class="col-md-4 cultura">
+                        <h2 class="h2">Cultura de servicio<br>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-fold-down" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#c5aa6a" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M12 11v8l3 -3m-6 0l3 3" />
+                                <line x1="9" y1="7" x2="10" y2="7" />
+                                <line x1="14" y1="7" x2="15" y2="7" />
+                                <line x1="19" y1="7" x2="20" y2="7" />
+                                <line x1="4" y1="7" x2="5" y2="7" />
+                            </svg>
+                        </h2>
+                        <p>Nacimos para servir y trabajamos desde el corazón.Honramos las promesas que hacemos a nuestros clientes</p>
+                    </div>
+                     <div class="col-md-4 sostenibilidad">
+                        <h2 class="h2">Sostenibilidad<br>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-fold-down" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#c5aa6a" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M12 11v8l3 -3m-6 0l3 3" />
+                                <line x1="9" y1="7" x2="10" y2="7" />
+                                <line x1="14" y1="7" x2="15" y2="7" />
+                                <line x1="19" y1="7" x2="20" y2="7" />
+                                <line x1="4" y1="7" x2="5" y2="7" />
+                            </svg>
+                        </h2>
+                        <p>Somos responsables económica,social y ambientalmente garantizando en beneficio mutuo entre nuestro grupos de interés</p>
+                    </div>
+                    <div class="col-md-4 pasion">
+                        <h2 class="h2">Pasión por la excelencia<br>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-fold-down" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#c5aa6a" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M12 11v8l3 -3m-6 0l3 3" />
+                                <line x1="9" y1="7" x2="10" y2="7" />
+                                <line x1="14" y1="7" x2="15" y2="7" />
+                                <line x1="19" y1="7" x2="20" y2="7" />
+                                <line x1="4" y1="7" x2="5" y2="7" />
+                            </svg>
+                        </h2>
+                        <p>En nuestros procesos trabajamos con los mejores estándares de calidad, excediendo la expectativa de los clientes</p>
+                    </div>
+                      <div class="col-md-4 valores">
+                        <h2 class="h2">Valores Empresariales<br>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-fold-down" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#c5aa6a" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M12 11v8l3 -3m-6 0l3 3" />
+                                <line x1="9" y1="7" x2="10" y2="7" />
+                                <line x1="14" y1="7" x2="15" y2="7" />
+                                <line x1="19" y1="7" x2="20" y2="7" />
+                                <line x1="4" y1="7" x2="5" y2="7" />
+                            </svg>
+                        </h2>
+                        <p>Integridad, Disciplina, Honradez, Seriedad y Responsabilidad</p>
+                    </div>
+                      <div class="col-md-4 inno">
+                        <h2 class="h2">Innovación con propósito<br>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-fold-down" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#c5aa6a" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M12 11v8l3 -3m-6 0l3 3" />
+                                <line x1="9" y1="7" x2="10" y2="7" />
+                                <line x1="14" y1="7" x2="15" y2="7" />
+                                <line x1="19" y1="7" x2="20" y2="7" />
+                                <line x1="4" y1="7" x2="5" y2="7" />
+                            </svg>
+                        </h2>
+                        <p>Creemos y nos atrevemos a desarrollar y adoptar nuevas formas de hacer las cosas</p>
+                    </div>
+
+
+                 
+
+                </div>
+            </div>
+        </section>
+    </main>
+    
+    <footer th:replace="layout/plantilla :: footer"></footer>
+</body>
 </html>
