--- a/src/main/resources/templates/servicio/inicio.html
+++ b/src/main/resources/templates/servicio/inicio.html
@@ -6,26 +6,26 @@
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"></header>
-        <section th:fragment="hero" class="hero">
-
-            <div class="contenido-hero">
-                <h2>[[#{aplicacion.titulo}]]</h2>
-                <p><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-whatsapp" width="60" height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#c5aa6a" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                        <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
-                        <path d="M9 10a0.5 .5 0 0 0 1 0v-1a0.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a0.5 .5 0 0 0 0 -1h-1a0.5 .5 0 0 0 0 1" />
-                    </svg>
-                </p><a class="boton" href="https://api.whatsapp.com/send?phone=50688030578&text=¡Hola%20CH%20Constructora!%20Quiero%20hablar%20con%20un%20agente.%20Mi%20nombre%20y%20asunto%20son%3A">[[#{plantilla.contacto}]]</a>
-            </div>
-        </section>
+        <section class="hero">
+      
+      <div class="contenido-hero">
+          <h2>CH Constructora</h2>
+          <p><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-whatsapp" width="60" height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#c5aa6a" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
+            <path d="M9 10a0.5 .5 0 0 0 1 0v-1a0.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a0.5 .5 0 0 0 0 -1h-1a0.5 .5 0 0 0 0 1" />
+          </svg>
+               </p><a class="boton" href="https://api.whatsapp.com/send?phone=50688030578&text=¡Hola%20CH%20Constructora!%20Quiero%20hablar%20con%20un%20agente.%20Mi%20nombre%20y%20asunto%20son%3A">Contacto</a>
+      </div>
+    </section>
         
          <div class="main-content">
-    <div th:fragment="inicioContent"  class="row">
+    <div class="row">
         
       <div class="body-text">
         
         <div class="col-md-4 text01">
-            <h3>[[#{plantilla.servicio1}]]</h3>
+            <h3>Arquitectura e Ingenería</h3>
             <div class="iconos">
               <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-report-money" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#c5aa6a" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -37,12 +37,12 @@
   
   
             </div>
-            <p>[[#{plantilla.servicio1P}]]</p>
+            <p>Ofrecemos una variedad de servicios en asesoría profesional de Arquitectura e Ingeniería para ayudarte a iniciar tu proyecto.</p>
             <ul>
-              <li>[[#{plantilla.servicio1L1}]]</li>
-              <li>[[#{plantilla.servicio1L2}]]</li>
-              <li>[[#{plantilla.servicio1L3}]]</li>
-              <li>[[#{plantilla.servicio1L4}]]</li>
+              <li>Planos Constructivos</li>
+              <li>Estudios Preliminares</li>
+              <li>Disenos Arquitectonico</li>
+              <li>Diseno Estructural</li>
 
             
           
@@ -50,7 +50,7 @@
   
         </div>
            <div class="col-md-4 text02">
-          <h3>[[#{plantilla.servicio2}]]</h3>
+          <h3>Construcción</h3>
           <div class="iconos">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-search" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#c5aa6a" fill="none" stroke-linecap="round" stroke-linejoin="round">
               <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -63,19 +63,20 @@
 
 
           </div>
-          <p>[[#{plantilla.servicio2P}]]</p>
+          <p>Trabajamos bajo la modalidad de llave en mano o bien por administración.
+            En ambas modalidades realizamos una oferta formal en la que se definen todas las características constructivas y materiales del proyecto; ofreciendo flexibilidad en la parte de acabados para que el cliente escoja los detalles finales</p>
             
             <ul>
-              <li>[[#{plantilla.servicio2L1}]]</li>
-              <li>[[#{plantilla.servicio2L2}]]</li>
-              <li>[[#{plantilla.servicio2L3}]]</li>
-              <li>[[#{plantilla.servicio2L4}]]</li>
-              <li>[[#{plantilla.servicio2L5}]]</li>
+              <li>Construcciones nuevas</li>
+              <li>Ampliaciones</li>
+              <li>Remodelaciones</li>
+              <li>Instalaciones Eléctricas</li>
+              <li>Instalaciones Mecánicas</li>
         
             </ul>
         </div>
         <div class="col-md-4 text01">
-          <h3>[[#{plantilla.servicio3}]]</h3>
+          <h3>Tramitología y asesoria</h3>
           <div class="iconos">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-report-money" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#c5aa6a" fill="none" stroke-linecap="round" stroke-linejoin="round">
               <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -87,12 +88,12 @@
 
 
           </div>
-          <p>[[#{plantilla.servicio3P}]]</p>
+          <p>Ofrecemos una variedad de servicios en asesoría profesional de Arquitectura e Ingeniería para ayudarte a iniciar tu proyecto.</p>
           <ul>
-            <li>[[#{plantilla.servicio3L1}]]</li>
-            <li>[[#{plantilla.servicio3L2}]]</li>
-            <li>[[#{plantilla.servicio3L3}]]</li>
-            <li>[[#{plantilla.servicio3L4}]]</li>
+            <li>Asesoría con trámites Bancarios</li>
+            <li>Asesoría para compra de terrenos.</li>
+            <li>Trámites Municipales</li>
+            <li>Trámites de disponibilidad de agua</li>
 
           
         
