--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -9,7 +9,7 @@
     <link th:href="@{/css/estilos.css}" rel="stylesheet"/>
     <script th:src="@{/js/rutinas.js}"></script>
     <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
- 
+ <!-- comit -->
     <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
