--- a/src/main/resources/templates/acerca/fragmentos.html
+++ b/src/main/resources/templates/acerca/fragmentos.html
@@ -1,3 +1,4 @@
+<!-- comit -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layout/plantilla :: head">
