--- a/src/main/resources/templates/servicio/fragmentos.html
+++ b/src/main/resources/templates/servicio/fragmentos.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head th:replace="layout/plantilla :: head">
-        
+        <link th:href="@{/css/estilos.css}" rel="stylesheet"/>
         <title>TODO supply a title</title>
     </head>
     <body>
