--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -1,17 +1,44 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://thymeleaft.org/extras/spring-security">
 <head th:fragment="head">
     <title>CH Constructora</title>
     <meta charset="UTF-8"/>
-    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
-    <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
     
+    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+        <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
+        <link th:href="@{/css/estilos.css}" rel="stylesheet"/>
+        <script th:src="@{/js/rutinas.js}"></script>
+        <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+        <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    
+    <!--
+    <!-- Bootstrap CSS
+    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+      <!-- Font Awesome CSS --
+    <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
+      <!-- Custom CSS 
     <link th:href="@{/css/estilos.css}" rel="stylesheet"/>
-    <script th:src="@{/js/rutinas.js}"></script>
+    <!--  JQuery, popper.js bostrasp.js 
     <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
- <!-- comit -->
     <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    
+     <!-- jQuery UI CSS 
+    <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css"/>
+    
+    <!-- jQuery and jQuery UI Scripts 
+    <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    
+    <!-- Bootstrap JS and Popper.js 
+    <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <!-- Custom JavaScript
+    <script th:src="@{/js/rutinas.js}"></script>
+    -->
+    
 </head>
 <body>
     <header th:fragment="header" class="header">
@@ -25,25 +52,36 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav"sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_VENDEDOR')">
                          <li class="nav-item px-2"><a class="nav-link" th:href="@{/inicio/servicio}">[[#{plantilla.inicio}]]</a></li>
                       <li class="nav-item px-2"><a class="nav-link" th:href="@{/acerca/about}">[[#{plantilla.acerca}]]</a></li>
-                      <li class="nav-item px-2"><a class="nav-link" th:href="@{/proyecto/listado}">[[#{plantilla.proyectos}]]</a></li>
+                      <li class="nav-item px-2"><a class="nav-link" sec:authorize="hasRole('ROLE_ADMIN')"  th:href="@{/proyecto/listado}">[[#{plantilla.proyectos}]]</a></li>
                        <li class="nav-item px-2"><a class="nav-link" th:href="@{/proyecto/proyectos}">[[#{plantilla.galeria}]]</a></li>
-                       <li class="nav-item px-2"><a class="nav-link" th:href="@{/}">[[#{plantilla.contacto}]]</a></li>
+                       <li class="nav-item px-2"><a class="nav-link" th:href="@{/proyecto/acabados}">[[#{plantilla.acabados}]]</a></li>
+                       <li class="nav-item px-2"><a class="nav-link" th:href="@{/contacto/contacto}">[[#{plantilla.contacto}]]</a></li>
                        
                         
                        
                     </ul>
-                    <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">[[#{plantilla.idioma}]]</a>
-                            <ul class="dropdown-menu dropdown-menu-dark">
-                                <li><a class="dropdown-item" th:href="@{/(lang=es)}">ES</a></li>
-                                <li><a class="dropdown-item" th:href="@{/(lang=en)}">EN</a></li>
-                            </ul>
+                       <ul class="navbar-nav">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">[[#{plantilla.idioma}]]</a>
+                                <ul class="dropdown-menu dropdown-menu-dark">
+                                    <li><a class="dropdown-item" th:href="@{/(lang=es)}">ES</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/(lang=en)}">EN</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                     <ul sec:authorize="isAnonymous()" class="navbar-nav ml-auto">                            
+                        <li class="nav-item">
+                            <form method="POST" th:action="@{/login}">
+                                <a href="#" onclick="this.parentNode.submit();" class="nav-link">
+                                    <i class="fas fa-user-clock"></i> [[#{login.login}]]                                        
+                                </a>
+                            </form>
                         </li>
                     </ul>
+                    
                 </div>
             </div>
         </nav>
@@ -56,7 +94,8 @@
             <div class="row pie">
                 <div class="col-md-4">
                     <h3>[[#{plantilla.contacto}]]</h3>
-                    <a style="align-items: center" ref="https://api.whatsapp.com/send?phone=50688030578&text=¡Hola%20CH%20Constructora!%20Quiero%20hablar%20con%20un%20agente.%20Mi%20nombre%20y%20asunto%20son%3A">
+                    
+                    <a href="https://api.whatsapp.com/send?phone=50688030578&text=¡Hola%20CH%20Constructora!%20Quiero%20hablar%20con%20un%20agente.%20Mi%20nombre%20y%20asunto%20son%3A">
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-whatsapp" width="32" height="32" viewBox="0 0 24 24" stroke-width="2.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
@@ -66,7 +105,7 @@
                     <p>(+506) 6348-8604</p>
                 </div>
                 <div class="col-md-4 logo">
-                    <a href="#">
+                    <a class="iconos-footer" href="#">
                          <img th:src="@{/img/CH -logo-whitev.png}" width="100" height="150px" class="d-inline-block align-middle mr-2" alt="CH Constructora Logo"/>
                     </a>
                 </div>
@@ -74,7 +113,7 @@
                     <h3>[[#{plantilla.redes}]]</h3>
                     <ul>
                         <li>
-                            <a href="https://www.instagram.com/ch_constructora/">
+                            <a class="iconos-footer" href="https://www.instagram.com/ch_constructora/">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="32" height="32" viewBox="0 0 24 24" stroke-width="2.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                     <rect x="4" y="4" width="16" height="16" rx="4" />
@@ -93,6 +132,7 @@
                 </div>
             </div>
         </div>
+        
     </footer>
 </body>
 </html>
