--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,8 +12,8 @@
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
                     <div class="card">
-                        <div class="card-header bg-success"><h2>[[#{login.login}]]</h2></div>
-                        <div class="card-body">
+                        <div class="card-header bg-secondary-subtle"><h2>[[#{login.login}]]</h2></div>
+                        <div class="card-body bg-secondary-subtle">
                             <form method="POST" th:action="@{/login}">
                                 <div class="form-group row my-3">
                                     <label class="col-md-5 my-auto" for="username"><i class="fas fa-user-lock"></i>[[#{login.username}]]:</label>
@@ -27,7 +27,7 @@
                                         <a th:href="@{/registro/nuevo}" class="btn"><i class="fas fa-user-plus"></i> [[#{accion.registrar}]]</a></button>
                                     <button class="btn btn-info" >                                        
                                         <a th:href="@{/registro/recordar}" class="btn"><i class="fas fa-envelope"></i> [[#{accion.recordar}]]</a></button>
-                                    <button class="btn btn-success" type="submit">
+                                    <button class="btn btn-success-subtle" type="submit">
                                         <span class="btn"><i class="fas fa-sign-in-alt"></i>
                                             [[#{login.login}]]</span></button>
                                 </div>
