--- a/src/main/resources/templates/proyecto/fragmentos.html
+++ b/src/main/resources/templates/proyecto/fragmentos.html
@@ -22,7 +22,7 @@
                     <div class="col-md-3">   
                         <button 
                             type="button" 
-                            class="btn btn-primary btn-block" 
+                            class="btn btn-info btn-block text-white" 
                             data-bs-toggle="modal" 
                             data-bs-target="#agregarProyecto">
                             <i class="fas fa-plus"></i> [[#{proyecto.agregar}]]
@@ -41,7 +41,7 @@
                  aria-hidden="true">
                 <div class="modal-dialog modal-md">
                     <div class="modal-content">
-                        <div class="modal-header bg-info text-white">
+                        <div class="modal-header bg-secondary text-white">
                             <h5 class="modal-title">[[#{proyecto.agregar}]]</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div> 
@@ -100,12 +100,13 @@
                                             <td th:text="${proyecto.activo} ? 'Activa' : 'Inactiva'" />
 
                                             <td>
-                                                <a th:href="@{/proyecto/eliminar/}+${proyecto.idProyecto}"
-                                                class="btn btn-danger">
-                                                    <i class="fas fa-trash"></i> [[#{accion.eliminar}]]</a>
-                                                <a th:href="@{/proyecto/modificar/}+${proyecto.idProyecto}"
-                                                   class="btn btn-success">
+                                                 <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/proyecto/modificar/}+${proyecto.idProyecto}"
+                                                   class="btn btn-light">
                                                     <i class="fas fa-pencil" ></i> [[#{accion.actualizar}]]</a>
+                                                <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/proyecto/eliminar/}+${proyecto.idProyecto}"
+                                                class="btn btn-dark">
+                                                    <i class="fas fa-trash"></i> [[#{accion.eliminar}]]</a>
+                                               
                                             </td>
                                         </tr>
                                     </tbody>
@@ -117,7 +118,7 @@
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="card text-center bg-success text-white mb-3">
+                        <div class="card text-center bg-secondary text-white mb-3">
                             <div class="card-body">
                                 <h3>[[#{proyecto.total}]]</h3>
                                 <h4 class="fs-2"><i class="fas fa-users"></i> [[${totalProyectos}]]</h4>
@@ -148,6 +149,13 @@
                                             <div class="card-header">
                                                 <h4>[[#{accion.actualizar}]]</h4>
                                             </div>
+                                            <div class="card-body">
+                                                <div class="mb-3">
+                                                    <label for="nombre">[[#{proyecto.nombre}]]</label>
+                                                    <input type="text" class="form-control" 
+                                                           name="nombre" th:field="*{nombre}"
+                                                           required="true">
+                                                </div>
                                             <div class="card-body">
                                                 <div class="mb-3">
                                                     <label for="descripcion">[[#{proyecto.descripcion}]]</label>
