--- a/src/main/resources/templates/proyecto/listado.html
+++ b/src/main/resources/templates/proyecto/listado.html
@@ -1,7 +1,8 @@
 <!-- comit -->
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://thymeleaft.org/extras/spring-security">
     <head th:replace="layout/plantilla :: head">
         <title>TODO supply a title</title>
     </head>
