--- a/src/main/resources/templates/proyecto/proyectos.html
+++ b/src/main/resources/templates/proyecto/proyectos.html
@@ -1,6 +1,7 @@
 <!-- comit -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
     <head th:replace="layout/plantilla :: head">
         <title>Galeria Proyectos</title>
     </head>
@@ -10,10 +11,13 @@
         <main>
 
       <h1 id="h1Project">Proyectos</h1>
+      <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <div class="card" style="width: 22rem;">
-            <img class="card-img-top" src="img/Tama/WhatsApp Image 2022-12-07 at 9.02.38 AM-4.jpeg" alt="Card image cap"/>
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" th:src="@{/img/WhatsApp Image 2022-12-07 at 9.02.38 AM-4.jpeg}" alt="Card image cap"/>
+            
+            
             <div class="card-body">
               <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur architecto temporibus quos dolorem</p>
             </div>
@@ -21,8 +25,8 @@
 
         </div>
         <div class="col-md-4">
-          <div class="card" style="width: 22rem;">
-            <img class="card-img-top" src="img/Tama/WhatsApp Image 2022-12-07 at 9.02.37 AM.jpeg" alt="Card image cap"/>
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" th:src="@{/img/WhatsApp Image 2022-12-07 at 9.02.37 AM.jpeg}" alt="Card image cap"/>
             <div class="card-body">
               <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur architecto temporibus quos dolorem</p>
             </div>
@@ -30,8 +34,8 @@
 
         </div>
         <div class="col-md-4">
-          <div class="card" style="width: 22rem;">
-            <img class="card-img-top" src="img/Tama/WhatsApp Image 2022-12-07 at 9.02.36 AM.jpeg" alt="Card image cap"/>
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" th:src="@{/img/WhatsApp Image 2022-12-07 at 9.02.36 AM.jpeg}" alt="Card image cap"/>
             <div class="card-body">
               <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur architecto temporibus quos dolorem.</p>
             </div>
@@ -39,8 +43,8 @@
 
         </div>
         <div class="col-md-4">
-          <div class="card" style="width: 22rem;">
-            <img class="card-img-top" src="img/Tama/WhatsApp Image 2022-12-07 at 9.02.36 AM-2.jpeg" alt="Card image cap"/>
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" th:src="@{/img/WhatsApp Image 2022-12-07 at 9.02.36 AM-2.jpeg}" alt="Card image cap"/>
             <div class="card-body">
               <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur architecto temporibus quos dolorem</p>
             </div>
@@ -48,8 +52,8 @@
 
         </div>
         <div class="col-md-4">
-          <div class="card" style="width: 22rem;">
-            <img class="card-img-top" src="img/Tama/test.jpeg" alt="Card image cap"/>
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" th:src="@{/img/test.jpeg}" alt="Card image cap"/>
             <div class="card-body">
               <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur architecto temporibus quos dolorem.</p>
             </div>
@@ -57,8 +61,8 @@
 
         </div>
         <div class="col-md-4">
-          <div class="card" style="width: 22rem;">
-            <img class="card-img-top" src="img/Tama/tele.jpeg" alt="Card image cap"/>
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" th:src="@{/img/tele.jpeg}" alt="Card image cap"/>
             <div class="card-body">
               <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur architecto temporibus quos dolorem</p>
             </div>
@@ -72,11 +76,20 @@
       </div>
 
       
-
+      </div>
      
   
     </main>
        
         <footer th:replace="layout/plantilla :: footer"></footer>
+        
+        <script>
+    $(".card").mouseenter(function(){
+
+      $(".card-text").slideDown(2000);
+
+    });
+
+ </script>
     </body>
 </html>
